2005-03-24  Edward Hervey  <bilboed@bilboed.com>

	* docs/libs/tmpl/gnl.sgml:
	* docs/libs/tmpl/gnlcomposition.sgml:
	* docs/libs/tmpl/gnlgroup.sgml:
	* docs/libs/tmpl/gnlobject.sgml:
	* docs/libs/tmpl/gnloperation.sgml:
	* docs/libs/tmpl/gnlsource.sgml:
	* docs/libs/tmpl/gnltimeline.sgml:
	Added sgml file templates for documentation

	* docs/libs/gnonlin.types:
	* docs/libs/gnonlin-sections.txt:
	* docs/libs/gnonlin-docs.sgml:
	Added files for better hierarchy of documentation

	* configure.ac:
	* docs/Makefile.am:
	* docs/version.entities.in:
	* docs/libs/Makefile.am: 
	Added version.entities for documentation

	* docs/libs/Makefile.am: (GTKDOC_LIBS): added libgnl.la dependency

	* gnl/gnlsource.c: (source_getfunction): typo mistake

	* gnonlin.pc.in: more corrections from Wouter Paesen for correct
	dependency checks

	* configure.ac: (GST_PLUGIN_LDFLAGS), (GST_REQ): 
	sanity corrections from Wouter Paesen

2005-03-23  Edward Hervey  <bilboed@bilboed.com>

	* docs/Makefile.am: Make doc build depend on ./configure choice

	* gnl/gnl.c, gnl/gnlcomposition.c, gnl/gnlelements.c,
	gnl/gnlgroup.c, gnl/gnlgroup.h, gnl/gnlobject.c, gnl/gnlobject.h,
	gnl/gnloperation.c, gnl/gnloperation.h, gnl/gnlsource.c,
	gnl/gnlsource.h, gnl/gnltimeline.c, gnl/gnltimeline.h:
	Modifications so that elements are registered as gst-plugins

	* gnl/Makefile.am: (plugin_LTLIBRARIES): 
	use plugin_ instead of lib_ so that it's installed in the gst-plugins
	directory

	* Makefile.am: removed useless lines
	
	* gnl/gnlobject.c: (gnl_object_get_property):
	was setting an enum instead of an int

	* configure.ac: No spaces in value assignment !!

	* test/sourcetest1.c: modified datarate of fakesrc

	* gnl/gnl*.[ch]: correction for GST_DEBUG_* functions

	* gnonlin.pc.in: updated file to correct dependencies versions

2005-03-22  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac, Makefile.am, docs/libs/Makefile.am, docs/Makefile.am: 
	Added gtk-doc API documentation skeleton
