@@ -72,7 +72,7 @@ extra_files =
 
 # CFLAGS and LDFLAGS for compiling scan program. Only needed if your app/lib
 # contains GtkObjects/GObjects and you want to document signals and properties.
-GTKDOC_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS) -I$(top_builddir)
+GTKDOC_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS) -I$(top_srcdir)
 GTKDOC_LIBS = $(GST_LIBS) $(GNL_LIBS) $(SCANOBJ_DEPS) $(top_builddir)/gnl/libgnl.la
 
 GTKDOC_CC=$(LIBTOOL) --mode=compile $(CC)
