@@ -7,7 +7,7 @@ noinst_PROGRAMS = \
 #simple simple1 composition layertest layertest2 simple2 group \
 #		  sourcetest1 sourcetest2 sourcetest3 \
 #		  layertest4 vlayertest sourcetest4
-
+EXTRA_DIST = pipelines.c
 
 LDADD = $(GST_LIBS) $(GNL_LIBS) ../gnl/libgnl.la
-AM_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS)
+AM_CFLAGS = $(GST_CFLAGS) $(GNL_CFLAGS) -I$(top_srcdir)
